Make Java 8 comaptible